--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,27 @@
-## MAC OS
-.DS_Store
-## TEXTMATE
-*.tmproj
-## netbeans
-nbproject
-tmtags
-## EMACS
-*~
-\#*
-.\#*
-## VIM
-*.swp
-## PROJECT::GENERAL
-pkg
-doc
-.yardoc
 *.gem
-Gemfile.lock
+*.rbc
 .bundle
-vendor/ruby
-## PROJECT::SPECIFIC
-.rbenv-version
-.rbx
-.ruby-version
+.config
+.yardoc
+Gemfile.lock
+InstalledFiles
+_yardoc
+coverage
+doc/
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+*.bundle
+*.so
+*.o
+*.a
+mkmf.log
+.rvmrc
+.DS_Store
+lib/.DS_Store
+lib/whiz_client/.DS_Store
+nbproject
